--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>full-stack</title>
-
-<style>
-/* ================== RESET ================== */
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Full Stack Projects</title>
+  <style>
 *{
   margin:0;
   padding:0;
@@ -14,184 +12,204 @@
   font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
 }
 
-/* ================== BODY ================== */
+/* Page Background */
 body{
-  background:#0d1117;
+  background:#0d1117;          /* GitHub dark background */
   color:#c9d1d9;
-}
-
-/* ================== TOP HEADER ================== */
-.topbar{
-  background:#010409;
-  padding:14px 22px;
-  border-bottom:1px solid #30363d;
+  min-height:100vh;
   display:flex;
+  justify-content:center;
   align-items:center;
-  gap:12px;
-  font-size:15px;
+  padding:30px;
+  flex-direction:column;
 }
 
-.repo-name{
-  font-weight:600;
-  color:#58a6ff;
-}
-
-.badge{
-  border:1px solid #30363d;
-  border-radius:20px;
-  padding:2px 10px;
-  font-size:12px;
-  color:#8b949e;
-}
-
-/* ================== MAIN ================== */
-.wrapper{
+/* Main Container */
+.container{
+  width:100%;
   max-width:1100px;
-  margin:30px auto;
-  padding:0 20px;
-}
-
-/* ================== TOOLBAR ================== */
-.toolbar{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:15px;
-}
-
-.branch{
-  background:#161b22;
+  background:#161b22;          /* GitHub panel */
   border:1px solid #30363d;
-  padding:6px 12px;
-  border-radius:6px;
-  font-size:13px;
+  padding:30px;
+  border-radius:12px;
 }
 
-.code-btn{
-  background:#238636;
-  color:#fff;
-  border:none;
-  padding:7px 14px;
-  border-radius:6px;
-  font-weight:600;
-  cursor:pointer;
-}
-
-/* ================== FILE LIST ================== */
-.file-box{
-  background:#161b22;
-  border:1px solid #30363d;
-  border-radius:6px;
-  overflow:hidden;
-}
-
-.file-row{
-  display:flex;
-  justify-content:space-between;
-  padding:12px 16px;
-  border-bottom:1px solid #30363d;
-}
-
-.file-row:last-child{
-  border-bottom:none;
-}
-
-.file-row:hover{
-  background:#0d1117;
-}
-
-.folder{
-  color:#58a6ff;
-  font-weight:500;
-}
-
-.commit{
-  color:#8b949e;
-  font-size:13px;
-}
-
-/* ================== README ================== */
-.readme{
-  margin-top:30px;
-  background:#161b22;
-  border:1px solid #30363d;
-  border-radius:6px;
-  padding:25px;
-}
-
-.readme h2{
-  margin-bottom:10px;
+/* Headings */
+h1{
+  font-size:28px;
+  margin-bottom:8px;
   color:#f0f6fc;
 }
 
-/* ================== LINKS ================== */
+h2{
+  margin:18px 0 10px;
+  font-size:18px;
+  color:#f0f6fc;
+}
+
+/* Paragraphs */
+p{
+  color:#8b949e;
+  margin-bottom:20px;
+  line-height:1.6;
+  font-size:15px;
+}
+
+/* Section Box */
+.box{
+  background:#0d1117;
+  border:1px solid #30363d;
+  border-radius:12px;
+  padding:14px;
+  margin-bottom:20px;
+}
+
+/* Grid */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:15px;
+}
+
+/* Cards */
+.card{
+  background:#161b22;
+  border:1px solid #30363d;
+  border-radius:12px;
+  padding:18px;
+  transition:0.2s ease;
+  min-height:170px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+}
+
+.card:hover{
+  transform:translateY(-4px);
+  border-color:#58a6ff;   /* GitHub blue */
+}
+
+/* Card text */
+.card h3,
+.card h2{
+  font-size:16px;
+  margin-bottom:8px;
+  color:#f0f6fc;
+}
+
+.card p{
+  font-size:14px;
+  color:#8b949e;
+  margin-bottom:12px;
+}
+
+/* Buttons / Links */
 a{
-  color:#58a6ff;
+  display:inline-block;
   text-decoration:none;
+  background:#238636;      /* GitHub green */
+  color:white;
+  font-weight:600;
+  padding:10px 14px;
+  border-radius:8px;
+  text-align:center;
 }
 
 a:hover{
-  text-decoration:underline;
+  background:#2ea043;
+}
+
+/* Footer */
+.page-footer{
+  margin-top:25px;
+  text-align:center;
+  color:#8b949e;
+  font-size:13px;
 }
 </style>
+
 </head>
-
 <body>
-
-<!-- ===== HEADER ===== -->
-<div class="topbar">
-  <span class="repo-name">rvsharma0430-cpu / full-stack</span>
-  <span class="badge">Public</span>
-</div>
-
-<!-- ===== CONTENT ===== -->
-<div class="wrapper">
-
-  <!-- TOOLBAR -->
-  <div class="toolbar">
-    <div class="branch">main ▼</div>
-    <button class="code-btn">Code</button>
-  </div>
-
-  <!-- FILE LIST -->
-  <div class="file-box">
-
-    <div class="file-row">
-      <span class="folder">📁 <a href="Assignment-1/">Assignment-1</a></span>
-      <span class="commit">added experiment 1 and 2</span>
-    </div>
-
-    <div class="file-row">
-      <span class="folder">📁 <a href="Assignment-2/">Assignment-2</a></span>
-      <span class="commit">added experiment 1 and 2</span>
-    </div>
-
-    <div class="file-row">
-      <span class="folder">📁 <a href="Exp-1/">Exp-1</a></span>
-      <span class="commit">added experiment 1 and 2</span>
-    </div>
-
-    <div class="file-row">
-      <span class="folder">📁 <a href="Experiment-2/">Experiment-2</a></span>
-      <span class="commit">added experiment 1 and 2</span>
-    </div>
-
-  </div>
-
-  <!-- README -->
-  <div class="readme">
-    <h2>README</h2>
-    <p>This is my GitHub Pages project hub.</p>
-
+  <div class="container">
+    <h1>Full Stack Projects</h1>
     <p>
-      👉 <a href="Assignment-1/">Assignment 1</a><br>
-      👉 <a href="Assignment-2/">Assignment 2</a><br>
-      👉 <a href="Exp-1/">Experiment 1</a><br>
-      👉 <a href="Experiment-2/">Experiment 2</a>
+      This is my GitHub Pages project hub.
     </p>
-  </div>
+    <h2>Experiment 1</h2>
+      <div class="box">
+    <div class="grid">        
+    <div class="card">
+        <h2>Student Registration</h2>
+        <p>Registration form experiment page.</p>
+        <a href="StudentRegistration.html">Open</a>
+      </div>
 
-</div>
+      <div class="card">
+        <h2>Bank Page</h2>
+        <p>Bank UI experiment page.</p>
+        <a href="Bank.html">Open</a>
+      </div>
 
+      <div class="card">
+        <h2>Dashboard Page</h2>
+        <p>Simple dashboard UI page.</p>
+        <a href="Dashboard.html">Open</a>
+      </div>
+    </div>
+      </div>
+    <h2>Assignment 1</h2>
+          <div class="box">
+    <div class="grid">
+      <div class="card">
+        <h3>Web Page Structure</h3>
+        <p>Basic Web Page Structure with HTML5 and CSS.</p>
+        <a href="Assignment-1/">Open</a>
+      </div>
+    </div>
+            </div>
+
+    <h2>Experiment 2</h2>
+    <div class="box">
+    <div class="grid">
+      <div class="card">
+        <h3>Character Counter</h3>
+        <p>Live character counter with limit feedback.</p>
+        <a href="Experiment-2/Character%20Counter/">Open</a>
+      </div>
+
+      <div class="card">
+        <h3>Product Filter</h3>
+        <p>Dropdown filter + sorting with responsive cards.</p>
+        <a href="Experiment-2/Product%20Filter/">Open</a>
+      </div>
+
+      <div class="card">
+        <h3>SVG Drawing Tool</h3>
+        <p>Interactive SVG drawing with shapes + undo.</p>
+        <a href="Experiment-2/SVG%20Drawing%20Tool/">Open</a>
+      </div>
+    </div>
+        </div>
+
+    <h2>Assignment 2</h2>
+    <div class="box">
+    <div class="grid">
+      <div class="card">
+        <h3>Image with Preview</h3>
+        <p>Thumbnail gallery with large preview + active highlight.</p>
+        <a href="Assignment-2/Image%20with%20Preview/">Open</a>
+      </div>
+
+      <div class="card">
+        <h3>Table Generator</h3>
+        <p>Dynamic table rows with delete button + alternate colors.</p>
+        <a href="Assignment-2/Table%20Generator/">Open</a>
+      </div>
+    </div>
+        </div>
+    </div>
+    
+    <footer class="page-footer">© 2026 | Made by Bhuvan</footer>
 </body>
 </html>
+
